[tool.poetry]
name = "PachLite"
version = "0.1.0"
description = ""
authors = ["Jimmy Whitaker <jimmy@pachyderm.io>"]
readme = "README.md"
license = "Apache-2.0"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
python-pachyderm = "v7.3.0"
lightning = "^2022.6.15"
pydantic = "<1.9.0"
fastapi = "^0.78.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pachlite = "app:cli"